--- a/ProjectTimeManager/Views/Projects/Index.cshtml
+++ b/ProjectTimeManager/Views/Projects/Index.cshtml
@@ -29,8 +29,7 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>*@
         <td>
-            @*@Html.ActionLink(item.Name, "Index", "ProjectMembers",null, new { id = item.ID })*@
-            @Html.ActionLink(item.Name, "Index" , new { controller = "ProjectMembers", id = item.ID })
+            @Html.ActionLink(item.Name, "Index" , new { controller = "MemberTimeTrack", id = item.ID })
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CreatedAt)
