--- a/ProjectTimeManager/Views/ProjectMembers/Index.cshtml
+++ b/ProjectTimeManager/Views/ProjectMembers/Index.cshtml
@@ -15,6 +15,9 @@
             @Html.DisplayNameFor(model => model.Person.Name)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Person.LastName)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Project.Name)
         </th>
         <th>
@@ -30,6 +33,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Person.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Person.LastName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Project.Name)
