--- a/ProjectTimeManager/Views/Projects/Index.cshtml
+++ b/ProjectTimeManager/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjectTimeManager.Model.Project>
+﻿@model IEnumerable<ProjectTimeManager.Models.ProjectTimeVM>
 
 @{
     ViewBag.Title = "Index";
@@ -12,35 +12,27 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ProjectName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
+            @Html.DisplayNameFor(model => model.TimeSpent)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>*@
         <td>
-            @Html.ActionLink(item.Name, "Index" , new { controller = "MemberTimeTrack", id = item.ID })
+            @Html.ActionLink(item.ProjectName, "Index" , new { controller = "MemberTimeTrack", id = item.Project_ID })
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
+            @Html.DisplayFor(modelItem => item.TimeSpent)
         </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.UpdatedAt)
-        </td>*@
+
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Project_ID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Project_ID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Project_ID })
         </td>
     </tr>
 }
