--- a/ProjectTimeManager/Views/Shared/_Layout.cshtml
+++ b/ProjectTimeManager/Views/Shared/_Layout.cshtml
@@ -21,11 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("People", "Index", "People")</li>
                     <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
                     <li>@Html.ActionLink("Project members", "Index", "ProjectMembers")</li>
+                    <li>@Html.ActionLink("Time tracking", "Index", "TimeTracks")</li>
                 </ul>
             </div>
         </div>
