--- a/ProjectTimeManager/Views/TimeTracks/Edit.cshtml
+++ b/ProjectTimeManager/Views/TimeTracks/Edit.cshtml
@@ -62,5 +62,17 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+    @Styles.Render("~/Content/css")
+
+<script type="text/javascript">
+
+     $(document).ready(function () {
+         $('.datetimepicker').datetimepicker({       
+         });
+
+     });
+</script>   
 }
